# CurlyOS-Core

./: .gitignore  .mcp.json  DEVELOPMENT_PLAN.md  PLAN_HERMES_INTEGRATION.md  PLAN_WEB.md  PROMPT_INSTALL.md  README.md  api_server.py  curlyos_setup.py  decision_loop_smoketest.py  decision_loop_wiring_smoketest.py  hermes_smoketest.py  import_mind.py  knowledge_smoketest.py  migrate.py  observability_smoketest.py  pyproject.toml  seed_hierarchy.py  smoketest.py  start_api_server.py
agent/: __init__.py  approval_service.py  hashchain.py  pdp_gate.py
cognition/: __init__.py
deploy/: .env.example  .gitignore  README.md  aws_embed_worker.py  aws_ssm_embed.sh  aws_ssm_resume.sh  backfill_kg_extract.py  backfill_kg_merge.sql  backfill_kg_merge2.sql  backfill_kg_merge3.py  backup.sh  bridge_kg_components.py  classify_entities.py  classify_entities_local.py  clean_cognition.sql  clean_memory_episodes.sql  consolidate_principles.py  curlyos-api.override.conf  densify_kg.py  docker-compose.yml  embed_memories.py  embed_mind_priority.py  ingest_brain.py  ingest_mind.py  install-hermes-plugin.sh  load_archive_vectors.py  migrate-to-named-volumes.sh  reclassify_entities.py  reclassify_epistemic.py  reembed_memories_sidecar.py  refine_blob_memories.py  refresh_cognition.py  remirror_principles.py
docs/: README.md  docusaurus.config.ts  orchestration-plan.md  package-lock.json  package.json  sidebars.ts
evaluation/: __init__.py
goals/: __init__.py  api.py
hermes_integration/: __init__.py  _import_helper.py  hermes_client.py  mcp_adapter.py  plugin.py  plugin.yaml  (+1 more)
(+103 files in other folders)
