[project]
name = "curlyos-core"
version = "0.1.0"
description = "CurlyOS Core — HitenOS cognitive architecture: bi-temporal memory, knowledge graph, identity, meta-cognition, studio, simulation, evaluation"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Hiten Saxena"}]

dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.3",
]
redis = [
    "redis>=5.0",
]
embeddings = [
    "sentence-transformers>=3.0",
]
reranker = [
    "sentence-transformers>=3.0",
]
llm = [
    "openai>=1.40",
]
orchestration = [
    "langgraph>=1.2",
    "langgraph-checkpoint-postgres==3.1.0",
    "langchain-core>=1.0",
]
all = [
    "curlyos-core[postgres,redis,embeddings,reranker,llm,orchestration]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory", "knowledge", "identity", "cognition", "studio", "simulation", "evaluation", "workspace", "shared", "hermes_integration", "safety", "agent", "goals", "orchestration"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
